--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
     <modules>
         <module>domain</module>
         <module>data</module>
