--- a/data/src/main/resources/application.properties
+++ b/data/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #mongo-db connections configurations
+#for prod environments you can configure the details here.  Currently these point to local test environment configurations
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.data.mongodb.database=test
