Sonar fixes and adding more documentation

--- a/api/src/it/resources/application.properties
+++ b/api/src/it/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.springframework.boot.autoconfigure.mongo.embedded=on
-logging.level.org.mongodb=on
+#logging.level.org.springframework.boot.autoconfigure.mongo.embedded=on
+#logging.level.org.mongodb=on
