--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -5,3 +5,4 @@ swagger.version=v0.0.1
 swagger.name=Sayali Gole
 swagger.email=sayali.gole@ymail.com
 swagger.url=http://localhost:8080/swagger-ui.html
+profile=${profile}
